--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
         rel="stylesheet">
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <title>Rings and fields</title>
+    <title>Mathematics Course Sem-8</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <header>
         <div class="right">
-            <div> Rings and Fields</div>
+            <div> Mathematics Course Sem-8</div>
         </div>
         <div class="left">
             <div class="home"> Home </div>
@@ -34,19 +34,7 @@
     <main class="main">
 
         <div class="container">
-            <h1>Rings in Mathematics:</h1>
-            <p>
-                Ring is a set <b>R</b> equipped with two binary operations Addition and multiplication follows these
-                axios.<br>
-                1 ) <b> R</b> is Abelion group under addition. <br>
-                (A) For all a,b belongs to <b>R</b> a+b also belongs to <b>R</b> <br>
-                (B) For all a,b,c belongs to <b>R</b>.<b> (a+b) +c= a + (b+c) </b> <br>
-                (C) For all a belongs to <b>R</b>. <b> a + 0 = 0 + a = a </b> <br>
-                (D) For all a belongs to <b> R</b>. There exist -a belongs to <b> R</b> Such that <b> +a + (-a) = 0</b>
-                <br>
-                2 ) <b> R</b> is monoid under multiplication. <br>
-                3 ) <b> R</b> is distributive under addition.
-            </p>
+           
         </div>
         <div class="slide ">
             
