--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="slide ">
             
-            <span class="material-symbols-outlined">
+            <span class="material-symbols-outlined" id="close-btn">
                 <div class="close-btn">
                     <span class="material-symbols-outlined" type="close" >
                         close
