--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header>
+    <!-- <header>
         <div class="right">
             <div> Mathematics Course Sem-8</div>
         </div>
@@ -23,7 +23,7 @@
             <div class="home"> Home </div>
             <!-- <button > <a href="./add.html">ADD MORE</a> </button> -->
         </div>
-    </header>
+    </header> -->
     <div class="buttons">
         <div class="inside-btn">
             <button class="dark-mode-btn"> Dark Mode</button>
