--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="left">
             <div class="home"> Home </div>
-            <!-- <button > <a href="./add.html">ADD MORE</a> </button> -->
+             <button > <a href="./add.html">ADD MORE</a> </button> 
         </div>
     </header> -->
     <div class="buttons">
